[tool.poetry]
name = "olxparser"
version = "0.1.0"
description = ""
authors = ["ballkicker228 <akas2008ko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
openpyxl = "^3.1.2"
pyfzf = "^0.3.1"
selenium = "^4.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
